[project]
name = "rapid-kl-transit-intelligence"
version = "0.1.0"
description = "Real-Time Transit Intelligence System for Rapid KL"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "protobuf>=5.27.0",
  "gtfs-realtime-bindings>=1.0.0",
  "polars>=1.0.0",
  "streamlit>=1.37.0",
  "pydeck>=0.9.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1"
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
pythonpath = ["."]
